finding nodes within component